still fixing mobile margins

--- a/src/app/case-study/critical-design/critical-design.component.css
+++ b/src/app/case-study/critical-design/critical-design.component.css
@@ -110,12 +110,14 @@ img.intro {
 
 
 /*-----mobile-----*/
+
 .mobile .outer-container {
-  margin: 1em;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: .5em
+
 }
 
 .mobile h2 {
