--- a/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.css
+++ b/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.css
@@ -69,7 +69,7 @@ img.intro {
 
 /*-----mobile-----*/
 .mobile .outer-container {
-  margin: 1em;
+  margin: .5em;
   display: flex;
   flex-direction: column;
   justify-content: center;
