--- a/src/app/case-study/playground/playground.component.css
+++ b/src/app/case-study/playground/playground.component.css
@@ -60,7 +60,7 @@ img.intro {
 
 /*-----mobile-----*/
 .mobile .outer-container {
-  margin: 1em;
+  margin: .5em;
   display: flex;
   flex-direction: column;
   justify-content: center;
