--- a/src/app/case-study/playground/playground.component.css
+++ b/src/app/case-study/playground/playground.component.css
@@ -59,8 +59,8 @@ img.intro {
 }
 
 /*-----mobile-----*/
-.mobile .outer-container {
-  margin: .5em;
+.mobile-outer-container {
+  margin: 1em;
   display: flex;
   flex-direction: column;
   justify-content: center;
