--- a/src/app/case-study/critical-design/critical-design.component.html
+++ b/src/app/case-study/critical-design/critical-design.component.html
@@ -66,7 +66,7 @@
 
 <!----MOBILE------>
 <div class="mobile" *ngIf="isMobile">
-    <div class="outer-container">
+    <div class="mobile-outer-container">
       <div class="main-container">
         <!--intro section-->
         <section class="intro" *ngFor="let c of intros">
