--- a/src/app/case-study/critical-design/critical-design.component.css
+++ b/src/app/case-study/critical-design/critical-design.component.css
@@ -116,13 +116,18 @@ img.intro {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 1em
+  margin: 2em
 }
 
 .mobile h2 {
-  font-size: 1.25em;
+  font-size: 1.4em;
   text-align: left;
   display: flex;
+  line-height: 1.5em;
+}
+
+.mobile img .intro {
+  height: fit-content;
 }
 
 .mobile .main-container {
@@ -130,9 +135,18 @@ img.intro {
   margin: 0;
 }
 
+.mobile .word-section {
+  margin-bottom: 4em;
+}
+
+.mobile .title {
+  margin-bottom: 1em;
+  font-size: 1em;
+}
+
 .mobile .description {
-  margin: 0;
-  font-size: 1.1em;
+  font-size: 1em;
+  margin: 0 0 1em 0;
 }
 
 .mobile .process-title {
