--- a/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.css
+++ b/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.css
@@ -73,12 +73,14 @@ img.intro {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 1em;
+  margin: 2em;
 }
 
 .mobile h2 {
-  font-size: 1.25em;
+  font-size: 1.4em;
   text-align: left;
+  display: flex;
+  line-height: 1.5em;
 }
 
 .mobile .main-container {
@@ -86,6 +88,16 @@ img.intro {
   margin: 0;
 }
 
+.mobile .word-section {
+  margin-bottom: 4em;
+}
+
 .mobile .description {
-  margin: 0;
+  font-size: 1em;
+  margin: 0 0 1em 0;
+}
+
+.mobile .title {
+  margin-bottom: 1em;
+  font-size: 1em;
 }
