--- a/src/app/case-study/critical-design/critical-design.component.html
+++ b/src/app/case-study/critical-design/critical-design.component.html
@@ -74,7 +74,7 @@
             <h2 class="page-title">{{c.title}}</h2>
             <div class="description">{{c.description}}</div>
             <div class="intro-img">
-              <img class="intro" src="{{c.imgUrl}}"/>
+              <img class="intro" src="{{c.imgUrl}}" width="100%" height="100%"/>
             </div>
           </div>
         </section>
@@ -110,7 +110,7 @@
             <div class="section-img"><img src="{{f.sectionImg}}" width="100%"></div>
           </div>
           <div class="video">
-            <iframe src="https://www.youtube.com/embed/ttNsRgl_ffA" width="100%" height="400" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/ttNsRgl_ffA" width="100%" height="150" allowfullscreen></iframe>
           </div>
         </section>
 
@@ -130,6 +130,4 @@
       </div>
     <app-case-footer></app-case-footer>
   </div>
-
-
 </div>
