--- a/src/app/case-study/playground/playground.component.css
+++ b/src/app/case-study/playground/playground.component.css
@@ -60,7 +60,7 @@ img.intro {
 
 /*-----mobile-----*/
 .mobile-outer-container {
-  margin: 1em;
+  margin: 2em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -68,8 +68,14 @@ img.intro {
 }
 
 .mobile h2 {
-  font-size: 1.25em;
+  font-size: 1.4em;
   text-align: left;
+  display: flex;
+  line-height: 1.5em;
+}
+
+.mobile img {
+  margin-bottom: 1em;
 }
 
 .mobile .main-container {
@@ -77,8 +83,18 @@ img.intro {
   margin: 0;
 }
 
+.mobile .word-section {
+  margin-bottom: 4em;
+}
+
+.mobile .title {
+  margin-bottom: 1em;
+  font-size: 1em;
+}
+
 .mobile .description {
-  margin: 0;
+  font-size: 1em;
+  margin: 0 0 1em 0;
 }
 
 .mobile .process-title {
