--- a/src/app/case-study/group-scheduling/group-scheduling.component.css
+++ b/src/app/case-study/group-scheduling/group-scheduling.component.css
@@ -124,7 +124,7 @@ img.intro {
 }
 
 /*-----mobile-----*/
-.mobile * {
+.mobile body {
   width: 100%;
 }
 
@@ -133,6 +133,7 @@ img.intro {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 2em;
 }
 
 .mobile .main-container {
@@ -141,7 +142,7 @@ img.intro {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin: 1em 2em 4em 2em;
+  margin: 0;
 }
 
 .mobile h2 {
@@ -150,13 +151,20 @@ img.intro {
   display: flex;
   line-height: 1.5em;
 }
+.mobile .intro img {
+  margin-left: -1em;
+  margin-bottom: -1em;
+}
+
+.mobile .overview img {
+  margin-bottom: -.5em;
+}
 
 .mobile img {
-  width: 100%;
   display: flex;
   align-self: center;
   justify-content: center;
-  margin-bottom: 1em;
+  margin-bottom: 0;
 }
 
 .mobile .description {
@@ -164,8 +172,8 @@ img.intro {
   margin: 0 0 1em 0;
 }
 
-.mobile .word-section {
-  margin-bottom: 4em;
+.mobile .word-section, .mobile .process {
+  margin-bottom: 3em;
 }
 
 .mobile .title {
@@ -173,12 +181,31 @@ img.intro {
   font-size: 1em;
 }
 
-
 .mobile .process-title {
   justify-content: flex-start;
   flex-wrap: wrap;
+  margin-top: 0;
 }
 
-.mobile .protos {
-  display: none;
+.mobile .research img, .mobile .protos, .mobile .final-design
+.section-descrip, .mobile .research .pimg, .mobile .pdescrip  {
+  margin-bottom: 0;
 }
+
+.mobile .proto-title {
+  margin-top: 2em;
+}
+
+ .mobile .final-design .word-section {
+   margin-bottom: 1em;
+ }
+
+ .mobile video {
+   margin-bottom: 3em;
+ }
+
+.mobile .reflections .section-descrip {
+  margin-bottom: -2em;
+
+}
+
