--- a/src/app/case-study/group-scheduling/group-scheduling.component.html
+++ b/src/app/case-study/group-scheduling/group-scheduling.component.html
@@ -128,8 +128,13 @@
       <section class="overview" *ngFor="let t of timely">
         <div class="word-section">
           <div class="title">{{t.sectionTitle}}</div>
-          <div *ngIf="t.sectionImg!=''" class="section-img">
-            <img src="{{t.sectionImg}}" width="100%">
+          <div *ngIf="t.sectionImg!=''" class="section-img mOverview">
+            <div *ngIf="t.sectionTitle=='OVERVIEW'">
+              <img src="./assets/img/timely-overview-mobile.png" width="70%">
+            </div>
+            <div *ngIf="t.sectionTitle!='OVERVIEW'">
+              <img src="{{t.sectionImg}}" width="100%">
+            </div>
           </div>
           <div class="section-descrip">{{t.sectionDescrip}}</div>
         </div>
@@ -152,7 +157,7 @@
              <div class="psubtitle">{{p.subtitle}}</div>
            </div>
            <div class="pdescrip">{{p.description}}</div>
-           <div class="pimg"><img src="{{p.img}}" width="110%"></div>
+           <div class="pimg"><img src="./assets/img/timely-research-mobile.png" width="104%"></div>
         </div>
         <div *ngIf="p.title=='Prototype'" class="proto">
           <div class="process-title">
@@ -179,7 +184,7 @@
             <!--creator flow-->
             <div class="protos">
               <div class="proto-title">1. Creator Flow</div>
-              <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+              <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="150"
                       src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FXXf4xanfLMJQdAVqOphZ9b%2FInteractive-Prototype-Timely%3Fnode-id%3D13%253A4%26viewport%3D401%252C410%252C0.052765510976314545%26scaling%3Dscale-down-width&chrome=DOCUMENTATION"
                       allowfullscreen>
               </iframe>
@@ -187,7 +192,7 @@
             <!--participant flow-->
             <div class="protos">
               <div class="proto-title">2. Participant Flow</div>
-              <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+              <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="150"
                       src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FXXf4xanfLMJQdAVqOphZ9b%2FInteractive-Prototype-Timely%3Fnode-id%3D13%253A575%26viewport%3D512%252C315%252C0.02377820573747158%26scaling%3Dscale-down-width&chrome=DOCUMENTATION"
                       allowfullscreen>
               </iframe>
@@ -195,7 +200,7 @@
             <!--review flow-->
             <div class="protos review">
               <div class="proto-title">3. Review Flow</div>
-              <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+              <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="150"
                       src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FXXf4xanfLMJQdAVqOphZ9b%2FInteractive-Prototype-Timely%3Fnode-id%3D13%253A3835%26viewport%3D393%252C313%252C0.039631232619285583%26scaling%3Dscale-down-width&chrome=DOCUMENTATION"
                       allowfullscreen>
               </iframe>
@@ -206,7 +211,7 @@
       </section>
       <!--reflections-->
       <section *ngFor="let r of reflect">
-         <div  *ngFor="let r of reflect" class="reflections">
+         <div class="reflections">
           <div class="word-section">
             <div class="title">{{r.sectionTitle}}</div>
             <div class="section-descrip">{{r.sectionDescrip}}</div>
