--- a/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.html
+++ b/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.html
@@ -46,7 +46,7 @@
           <h2 class="page-title">{{c.title}}</h2>
           <div class="description">{{c.description}}</div>
           <div class="intro-img">
-            <img class="intro" src="{{c.imgUrl}}"/>
+            <img class="intro" src="{{c.imgUrl}}" width="100%"/>
           </div>
         </div>
       </section>
@@ -55,7 +55,12 @@
         <div class="word-section" *ngIf="c.sectionTitle!='PROBLEM SPACE'">
           <div class="title">{{c.sectionTitle}}</div>
           <div *ngIf="c.sectionImg!=''" class="section-img">
-            <img src="{{c.sectionImg}}" width="100%">
+            <div *ngIf="c.sectionTitle=='OVERVIEW'">
+              <img src="./assets/img/causeway-overview-mobile.png" width="70%">
+            </div>
+            <div *ngIf="c.sectionTitle!='OVERVIEW'">
+              <img src="{{c.sectionImg}}" width="100%">
+            </div>
           </div>
           <div class="section-descrip">{{c.sectionDescrip}}</div>
         </div>
