--- a/src/app/case-study/critical-design/critical-design.component.css
+++ b/src/app/case-study/critical-design/critical-design.component.css
@@ -110,6 +110,10 @@ img.intro {
 
 /*-----mobile-----*/
 
+.mobile body {
+  width: 100%;
+}
+
 .mobile-outer-container {
   display: flex;
   flex-direction: column;
@@ -120,7 +124,11 @@ img.intro {
 
 .mobile .main-container {
   font-size: 1em;
-  margin: 0em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
 }
 
 .mobile h2 {
@@ -129,13 +137,28 @@ img.intro {
   display: flex;
   line-height: 1.5em;
 }
-
-.mobile img .intro {
-  height: fit-content;
+.mobile .intro img {
+  margin-left: -1em;
+  margin-bottom: -1em;
 }
 
+.mobile .overview img {
+  margin-bottom: -.5em;
+}
 
-.mobile .word-section {
+.mobile img {
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  margin-bottom: 0;
+}
+
+.mobile .description {
+  font-size: 1em;
+  margin: 0 0 1em 0;
+}
+
+.mobile .word-section, .mobile .process, .mobile video  {
   margin-bottom: 3em;
 }
 
@@ -144,12 +167,26 @@ img.intro {
   font-size: 1em;
 }
 
-.mobile .description {
-  font-size: 1em;
-  margin: 0 0 1em 0;
+.mobile .process-title {
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  margin-top: 0;
 }
 
-.mobile .process-title {
-  font-size: 1em;
-  flex-wrap: wrap;
+.mobile .research img, .mobile .protos, .mobile .final-design
+.section-descrip, .mobile .research .pimg, .mobile .pdescrip  {
+  margin-bottom: 0;
 }
+
+.mobile .proto-title {
+  margin-top: 2em;
+}
+
+ .mobile .final-design .word-section {
+   margin-bottom: 1em;
+ }
+
+.mobile .reflections .section-descrip {
+  margin-bottom: -2em;
+}
+
