--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -5,7 +5,6 @@
   margin: 4em;
 
 }
-
 * {
   font-size: .92em;
   font-weight: 600;
@@ -34,15 +33,27 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 2em;
-  margin-bottom: 1.5em;
+  align-items: center;
+  margin: 0;
+  padding-top: 1.4em;
+  padding-bottom: 1em;
+  background-color: #5B7FFE;
+  opacity: .55;
 
 }
 
 .nav-bar-container-mobile .nav-item {
-  font-size: .8em;
+  font-size: 1em;
   margin-bottom: 0;
   margin-right: 1em;
   margin-left: 1em;
+  color: #FFFFFF;
+  font-weight: 400;
 }
+
+.nav-bar-container-mobile .activePage {
+  font-weight: 700;
+  text-decoration: underline;
+}
+
 
