--- a/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.html
+++ b/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.html
@@ -46,7 +46,7 @@
           <h2 class="page-title">{{c.title}}</h2>
           <div class="description">{{c.description}}</div>
           <div class="intro-img">
-            <img class="intro" src="{{c.imgUrl}}" width="100%"/>
+            <img class="intro" src="./assets/img/causeway-intro-mobile.png" width="100%"/>
           </div>
         </div>
       </section>
